fix: settings menu not showing without header font size

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,4 +1,6 @@
 .header {
+  font-size: 1rem;
+
   display: grid;
   grid-auto-flow: column;
   justify-content: space-between;
